Fix excessive layout spacing when details are longer than description

--- a/app/assets/stylesheets/transformation/pages/opportunity.scss
+++ b/app/assets/stylesheets/transformation/pages/opportunity.scss
@@ -67,7 +67,6 @@ h1 {
 
 .disclaimer {
   @include content;
-  clear: both;
   margin-bottom: $spacing-1;
 
   p {
